--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,13 +1,13 @@
 ---
 ---
 
-@import "_sass/include-media";
-@import "_sass/variables";
-@import "_sass/type";
-@import "_sass/container";
-@import "_sass/nav";
-@import "_sass/footer";
-@import "_sass/post";
+// @import "_sass/include-media";
+// @import "_sass/variables";
+// @import "_sass/type";
+// @import "_sass/container";
+// @import "_sass/nav";
+// @import "_sass/footer";
+// @import "_sass/post";
 @import "_sass/video";
 
 html,
