--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@
 // @import "_sass/nav";
 // @import "_sass/footer";
 // @import "_sass/post";
-@import "_sass/video";
+@import "sass/video";
 
 html,
 body {
