--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,14 +1,14 @@
 ---
 ---
 
-// @import "_sass/include-media";
-// @import "_sass/variables";
-// @import "_sass/type";
-// @import "_sass/container";
-// @import "_sass/nav";
-// @import "_sass/footer";
-// @import "_sass/post";
-@import "_sass/video";
+@import "include-media";
+@import "variables";
+@import "type";
+@import "container";
+@import "nav";
+@import "footer";
+@import "post";
+@import "video";
 
 html,
 body {
