reroute to site

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 		<div class="container__nav-wrapper">
 			<div class="sidebar">
 				<div class="sidebar__logo">
-					<a href="/">
+					<a href="{{ site.url }}">
 						{%- include logo.svg -%}
 					</a>
 				</div>
