Adding new about link

--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,5 @@
 <ul class="sidebar__list sidebar__list--toplvl">
+	<li><a href="https://jetpacksandrollerskates.github.io/website/about/">About</a></li>
 	<li><a href="http://jetpacksandrollerskates.com/">My Work</a></li>
 	<li><a href="https://jetpacks-and-rollerskates.myshopify.com/">Store</a></li>
 </ul>
