--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,21 +7,23 @@ layout: default
 		{{ content }}
 	</div>
 
-	<div>
-		{% for post in site.posts %}
-			<div class="post-preview">
-				<h2 class="post-preview__title">
-					<a href="{{ site.url }}{{ post.url }}">
-						{{ post.title }}
+	<div class="article-preview-container">
+		<div class="article-preview-row">
+			{% for article in site.articles limit:8 %}
+				<div class="article-preview {% cycle 'article-preview--two-third', 'article-preview--one-third' %}">
+					<a class="article-preview__button" href="{{ site.url }}{{ article.url }}">
+						<div class="article-preview__image" style="background-image: url({{ article.thumbnail }});"></div>
+						<p class="article-preview__title">
+							{{ article.title }}
+						</p>
 					</a>
-				</h2>
-				<div class="post-preview__image" style="background-image: url({{ post.thumbnail }});"></div>
-				<p class="post-preview__excerpt">
-					{{  post.excerpt }}
-					<br />
-					<a class="post-preview__button" href="{{ site.url }}{{ post.url }}">Read the whole article</a>
-				</p>
-			</div>
-		{% endfor %}
+				</div>
+
+				{% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+  				{% if thecycle == 'even' %}
+    				</div><div class="article-preview-row">
+  				{% endif %}
+			{% endfor %}
+		</div>
 	</div>
 </div>
