--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,13 +9,4 @@
 @import "footer";
 @import "post";
 @import "video";
-
-html,
-body {
-	margin: 0;
-	-webkit-font-smoothing: antialiased;
-}
-
-* {
-	box-sizing: border-box;
-}
+@import "home";
