--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -15,6 +15,7 @@
 .article-preview {
 	padding: 0 1rem;
 	margin-bottom: 1rem;
+	box-sizing: border-box;
 	&--one-third {
 		width: 100%;
 		@include media('>=tablet') {
