--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,17 +19,17 @@
 			<ul class="social-list">
 				<li>
 					<a href="https://twitter.com/{{ site.twitter_username }}">
-						<i class="fab fa-twitter"></i>
+						<i class="social-list__icon social-list__icon--twitter"></i>
 					</a>
 				</li>
 				<li>
 					<a href="https://www.instagram.com/{{ site.instagram_username }}">
-						<i class="fab fa-instagram"></i>
+						<i class="social-list__icon social-list__icon--instagram"></i>
 					</a>
 				</li>
 				<li>
 					<a href="https://dribbble.com/{{ site.dribbble_username }}">
-						<i class="fab fa-dribbble"></i>
+						<i class="social-list__icon social-list__icon--dribbble"></i>
 					</a>
 				</li>
 			</ul>
