--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,14 +44,7 @@
   <meta name="twitter:site" content="@BlakeStevenson" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=BioRhyme:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <!-- Fontawesome CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
-
   <!-- Main CSS -->
-  <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}?version=2">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
 </head>
