--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,21 +20,21 @@
 						<li>
 							<a href="https://twitter.com/{{ site.twitter_username }}">
 								<div class="social-icon">
-									<i class="fab fa-twitter"></i>
+									<i class="social-list__icon social-list__icon--twitter"></i>
 								</div>
 							</a>
 						</li>
 						<li>
 							<a href="https://www.instagram.com/{{ site.instagram_username }}">
 								<div class="social-icon">
-									<i class="fab fa-instagram"></i>
+									<i class="social-list__icon social-list__icon--instagram"></i>
 								</div>
 							</a>
 						</li>
 						<li>
 							<a href="https://dribbble.com/{{ site.dribbble_username }}">
 								<div class="social-icon">
-									<i class="fab fa-dribbble"></i>
+									<i class="social-list__icon social-list__icon--dribbble"></i>
 								</div>
 							</a>
 						</li>
