--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="32x32_favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="16x16_favicon.png">
 
   <title>{{ page.title | escape }}</title>
   <meta property="og:title" content="{{ page.title | strip_html }}" />
