adding a link to nav
linking out to the blog page.

--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -2,6 +2,7 @@
 	<li><a href="https://jetpacksandrollerskates.github.io/website/about/">About</a></li>
 	<li><a href="http://jetpacksandrollerskates.com/">My Work</a></li>
 	<li><a href="https://jetpacks-and-rollerskates.myshopify.com/">Store</a></li>
+	<li><a href="http://jetpacksandrollerskates.com/blog">Blog</a></li>
 </ul>
 
 <!-- <div class="sidebar__text sidebar__text--separator">
