--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -8,6 +8,7 @@
 	img {
 		width: calc(100% + 30px);
 		margin: 0 -15px;
+		border-radius: 20px;
 		@include media('>=desktop') {
 			width: calc(100% + 16rem);
 			margin: 0 -8rem;
